[level 2] Title: 전화번호 목록, Time: 283.43 ms, Memory: 245 MB -BaekjoonHub